Search section added

--- a/index.html
+++ b/index.html
@@ -5,16 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Hero</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-
+        <!--   
+        <nav class="navbar">
+            <div class="logo">
+                 <div class="logo-img"> 
+                <img src="images/logo.png" alt="">
+                <p>Travel<span>Hero</span></p>
+            </div>
+            <div class="menu">
+                <a href="">Home</a>
+                <a href="">Packeges</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+            </div>
+        </nav>
+    -->
     </header>
     <main>
-
+        <div class="search">
+            <h1>Explore Your Travel</h1>
+            <p>
+                Travel with us and get amazing experience.Travel with us and get amazing experience.Travel with us and get amazing experience.
+            </p>
+            <div class="searchbox">
+                <input type="text" placeholder="Where go">
+                <select name="" id="">
+                    <option value="Where" selected>Where</option>
+                </select>
+                <select name="" id="">
+                    <option value="Select Type" selected>Select Type</option>
+                </select>
+                
+                <button>Find Now</button>
+            </div>
+        </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
