popular destination with responsive added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Hero</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Work+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/responsive.css">
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -31,7 +34,7 @@
     -->
     </header>
     <main>
-        <div class="search">
+        <section class="search">
             <h1>Explore Your Travel</h1>
             <p>
                 Travel with us and get amazing experience.Travel with us and get amazing experience.Travel with us and get amazing experience.
@@ -47,7 +50,41 @@
                 
                 <button>Find Now</button>
             </div>
-        </div>
+        </section>
+        <section class="populartours">
+            <div class="tourdescription">
+                <h1>Our Popular Tours</h1>
+                <p class="description">
+                    We have lot of tour histories. We are working since 1986. Here are some list of tours.We have lot of tour histories. We are working since 1986. Here are some list of tours
+                </p>
+                <ul class="ulitems">
+                    <li>In 1989 we traveled to India with about more than 40 tourists</li>
+                    <li>In 1905 We went India for 20 days. About 100 visitors ware with us</li>
+                    <li>In 2001 we visited Malta. About 12 person went with us.</li>
+                </ul>
+                <p>
+                    Moreover we visited more that 20 counties in Asia and Africa. Customers get a qualitiful experience traveling with us.Moreover we visited more that 20 counties in Asia and Africa. Customers get a qualitiful experience traveling with us.
+                </p>
+                <button class="primarybutton">Read More</button>
+            </div>
+            <img src="images/Rectangle 4.png" alt="">
+        </section>
+        <section class="yourdestination">
+            <h1>Choose Your Destination</h1>
+            <p>
+                We have offer for you in various counties in the world. If you are thirsty to enjoy the natural beauty 
+                Then Travel Hero is a best option for you. Here are some list of counties to visit.
+            </p>
+            <div class="picture">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 8.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/Rectangle 7.png" alt="">
+                <img src="images/Rectangle 9.png" alt="">
+                <img src="images/Rectangle 11.png" alt="">
+                <img src="images/Rectangle 10.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
