Menu section addedd

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 <body>
     <header>
-        <!--   
+         
         <nav class="navbar">
-            <div class="logo">
-                 <div class="logo-img"> 
+            <div class="logo"> 
                 <img src="images/logo.png" alt="">
                 <p>Travel<span>Hero</span></p>
             </div>
+            <a href="" class="iconformobile"><i class="fa fa-bars"></i></a>
             <div class="menu">
                 <a href="">Home</a>
                 <a href="">Packeges</a>
@@ -31,7 +31,7 @@
                 <a href="">Contact</a>
             </div>
         </nav>
-    -->
+   
     </header>
     <main>
         <section class="search">
@@ -48,7 +48,7 @@
                     <option value="Select Type" selected>Select Type</option>
                 </select>
                 
-                <button>Find Now</button>
+                <button><i class="fa fa-search">Find Now</i></button>
             </div>
         </section>
         <section class="populartours">
