discount section addedd

--- a/index.html
+++ b/index.html
@@ -146,7 +146,32 @@
             </div>
 
         </section>
-        <section></section>
+        <section class="newsletter">
+            <div class="info">
+                <h1>
+                    Newsletter
+                </h1>
+                <p>
+                    Get your daily dose of travel news & tips. Sign 
+up today
+                </p>
+                <hr>
+                <input type="text" placeholder="Enter your name">
+                <input type="email" name="" id=""placeholder="Enter your email">
+                <input type="button" value="subscribe">
+                
+            </div>
+            <div class="picture">
+                <img src="images/group13.png" alt="">
+                <div class="discount">
+                    Travel.com
+                    <p>
+                        Save upto 70%z
+                    </p>
+
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
