--- a/index.html
+++ b/index.html
@@ -173,7 +173,18 @@ up today
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="logo">
+            <img src="images/logo.png" alt="">
+       
+            <h3>Tavel<span>Hero</span></h3>
+        </div>
+        <p>You can communicate with us by folloing social media</p>
+        <div class="socialmedia">
+            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-github"></i>
+        </div>
+        
 
     </footer>
 </body>
