--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ up today
     </main>
     <footer class="footer">
         <div class="logo">
-            <img src="images/" alt="">
+            <img src="images/logo.png" alt="">
        
             <h3>Tavel<span>Hero</span></h3>
         </div>
